--- a/new_pages/importing.Rmd
+++ b/new_pages/importing.Rmd
@@ -9,6 +9,8 @@ knitr::include_graphics(here::here("images", "Import_Export_1500x500.png"))
 
 In this page we describe ways to locate, import, and export files:  
 
+在本页中，我们描述了定位、导入和导出文件的方法:
+
 * Use of the **rio** package to flexibly `import()` and `export()` many types of files  
 * Use of the **here** package to locate files relative to an R project root - to prevent complications from file paths that are specific to one computer  
 * Specific import scenarios, such as:  
@@ -23,32 +25,65 @@ In this page we describe ways to locate, import, and export files:
 * Exporting/saving files and plots  
 
 
+* 使用**rio**包灵活地` import() `和` export() `多种类型的文件
+* 使用**here**包来定位相对于R项目根目录的文件-以防止特定于一台计算机的文件路径的复杂性
+* 具体导入场景，如:
+  * 特定的Excel表
+  * 混乱的标题和跳过行
+  * 从谷歌表
+  * 从发布到网站的数据
+  * 与api
+  * 正在导入*最近的*文件
+* 人工数据输入
+* R特定的文件类型，如RDS和RData
+* 导出/保存文件和图
+  
+  
+
+
 <!-- ======================================================= -->
 ## Overview
 
 When you import a "dataset" into R, you are generally creating a new *data frame* object in your R environment and defining it as an imported file (e.g. Excel, CSV, TSV, RDS) that is located in your folder directories at a certain file path/address.  
 
+当你导入一个“dataset”到R时，你通常是在你的R环境中创建一个新的*data frame*对象，并将其定义为一个位于文件夹目录中的特定文件路径/地址的导入文件(例如Excel, CSV, TSV, RDS)。
+
 You can import/export many types of files, including those created by other statistical programs (SAS, STATA, SPSS). You can also connect to relational databases.  
 
+您可以导入/导出多种类型的文件，包括由其他统计程序(SAS, STATA, SPSS)创建的文件。您还可以连接到关系数据库
+
 R even has its own data formats:  
+
+R甚至有自己的数据格式:
 
 * An RDS file (.rds) stores a single R object such as a data frame. These are useful to store cleaned data, as they maintain R column classes. Read more in [this section](#import_rds).    
 * An RData file (.Rdata) can be used to store multiple objects, or even a complete R workspace. Read more in [this section](#import_rdata).  
 
+* RDS文件(. RDS)存储单个R对象，如数据帧。这对于存储清理后的数据很有用，因为它们维护R列类。更多信息请参阅[本节](#import_rds)。
+*RData文件(. RData)可以用来存储多个对象，甚至是一个完整的R工作区。更多信息请参阅[本节](#import_rdata)。
 
 <!-- ======================================================= -->
 ## The **rio** package {}  
 
 The R package we recommend is: **rio**. The name "rio" is an abbreviation of "R I/O" (input/output).  
 
-Its functions `import()` and `export()` can handle many different file types (e.g. .xlsx, .csv, .rds, .tsv). When you provide a file path to either of these functions (including the file extension like ".csv"), **rio** will read the extension and use the correct tool to import or export the file.  
+我们推荐的R包是:**rio**。“rio”是“R I/O”(输入/输出)的缩写。
+
+Its functions `import()` and `export()` can handle many different file types (e.g. .xlsx, .csv, .rds, .tsv). When you provide a file path to either of these functions (including the file extension like ".csv"), **rio** will read the extension and use the correct tool to import or export the file. 
+
+它的函数`import() `和`export() `可以处理许多不同的文件类型(例如。xlsx， .csv， .rds， .tsv)。当你提供一个文件路径到这些函数(包括文件扩展名“.csv”)，**rio**将读取扩展名并使用正确的工具来导入或导出文件。
 
 The alternative to using **rio** is to use functions from many other packages, each of which is specific to a type of file. For example, `read.csv()` (**base** R), `read.xlsx()` (**openxlsx** package), and `write_csv()` (**readr** pacakge), etc. These alternatives can be difficult to remember, whereas using `import()` and `export()` from **rio** is easy.  
 
+使用**rio**的替代方法是使用来自许多其他包的函数，每个包都特定于一种类型的文件。例如,“read.csv()的(* *base* * R),“read.xlsx()的(* * openxlsx * *包),和“write_csv()的(* * readr * * pacakge),等等。这些替代可能很难记住，而使用' import() '和' export() ' from **rio**很容易。
+
 **rio**'s functions `import()` and `export()` use the appropriate package and function for a given file, based on its file extension. See the end of this page for a complete table of which packages/functions **rio** uses in the background. It can also be used to import STATA, SAS, and SPSS files, among dozens of other file types.  
+
+**rio**' '函数` import()`和` export()` 根据文件的扩展名，对给定的文件使用适当的包和函数。在这个页面的末尾，可以看到一个完整的表格，上面是**rio**在后台使用的包/函数。它还可以用于导入STATA、SAS和SPSS文件，以及其他几十种文件类型。
 
 Import/export of shapefiles requires other packages, as detailed in the page on [GIS basics].    
 
+shapefiles的导入/导出需要其他包，详见[GIS基础知识]一页。
 
 
 
@@ -57,22 +92,38 @@ Import/export of shapefiles requires other packages, as detailed in the page on 
 
 The package **here** and its function `here()` make it easy to tell R where to find and to save your files - in essence, it builds file paths.  
 
+包**here**和它的函数' here() '使它很容易告诉R在哪里找到和保存你的文件-本质上，它构建文件路径。
+
 Used in conjunction with an R project, **here** allows you to describe the location of files in your R project in relation to the R project's *root directory* (the top-level folder). This is useful when the R project may be shared or accessed by multiple people/computers. It prevents complications due to the unique file paths on different computers (e.g. `"C:/Users/Laura/Documents..."` by "starting" the file path in a place common to all users (the R project root).  
 
-This is how `here()` works within an R project:  
+与R项目一起使用时，这里的**允许你描述R项目中与R项目的*根目录*(顶级文件夹)相关的文件位置。当R项目可能被多人/计算机共享或访问时，这是非常有用的。它防止了由于不同计算机上的独特文件路径(例如:“C: /用户/劳拉/文件…通过在所有用户共同的地方(R项目根目录)“启动”文件路径。
+
+This is how `here()` works within an R project: 
+
+这就是` here()` 在R项目中的工作方式:
 
 * When the **here** package is first loaded within the R project, it places a small file called ".here" in the root folder of your R project as a "benchmark" or "anchor"  
 * In your scripts, to reference a file in the R project's sub-folders, you use the function `here()` to build the file path *in relation to that anchor*
 * To build the file path, write the names of folders beyond the root, within quotes, separated by commas, finally ending with the file name and file extension as shown below  
 * `here()` file paths can be used for both importing and exporting  
 
+* 当**here**包第一次在R项目中加载时，它会放置一个名为“。在R项目的根文件夹中作为“基准”或“锚”
+* 在你的脚本中，要在R项目的子文件夹中引用一个文件，你可以使用函数' here() '来构建与锚*相关的文件路径*
+* 要构建文件路径，请将根目录之外的文件夹名称用引号括起来，用逗号分隔，最后以文件名和文件扩展名结尾，如下所示
+* `here() `文件路径可用于导入和导出
+
 For example, below, the function `import()` is being provided a file path constructed with `here()`.  
 
+例如，下面为函数`import()`提供了一个用' here() '构造的文件路径。
 ```{r, eval=F}
 linelist <- import(here("data", "linelists", "ebola_linelist.xlsx"))
 ```
 
 The command `here("data", "linelists", "ebola_linelist.xlsx")` is actually providing the full file path that is *unique to the user's computer*:  
+
+命令`here("data"， "linelist "， "ebola_linelist.xlsx") `实际上提供了完整的文件路径，该路径是用户计算机*唯一的*:
+
+
 
 ```
 "C:/Users/Laura/Documents/my_R_project/data/linelists/ebola_linelist.xlsx"
@@ -80,29 +131,41 @@ The command `here("data", "linelists", "ebola_linelist.xlsx")` is actually provi
 
 The beauty is that the R command using `here()` can be successfully run on any computer accessing the R project.   
 
+美妙之处在于，使用' here() '的R命令可以在任何访问R项目的计算机上成功运行。
+
 
 <span style="color: darkgreen;">**_TIP:_** If you are unsure where the “.here” root is set to, run the function `here()` with empty parentheses.</span>  
 
+<span style="color: darkgreen;">**_提示:_**如果你不确定“。在这里“root被设置为，运行函数' Here() '带空括号。</span>  
+
 Read more about the **here** package [at this link](https://here.r-lib.org/).  
 
-
+阅读更多关于**here**包[在这个链接](https://here.r-lib.org/)。
 
 <!-- ======================================================= -->
 ## File paths  
 
 When importing or exporting data, you must provide a file path. You can do this one of three ways:  
 
+导入或导出数据时，必须提供文件路径。你可以采用以下三种方法:
+
 1) *Recommended:* provide a "relative" file path with the **here** package  
 2) Provide the "full" / "absolute" file path  
 3) Manual file selection  
 
-
+1）*推荐:*提供一个“相对”文件路径与**here**包
+2）提供"full" / "absolute"文件路径
+3）手册文件选择
 
 ### "Relative" file paths {.unnumbered}
 
 In R, "relative" file paths consist of the file path *relative to* the root of an R project. They allow for more simple file paths that can work on different computers (e.g. if the R project is on a shared drive or is sent by email). As described [above](#here), relative file paths are facilitated by use of the **here** package.  
 
-An example of a relative file path constructed with `here()` is below. We assume the work is in an R project that contains a sub-folder "data" and within that a subfolder "linelists", in which there is the .xlsx file of interest.  
+在R中，“相对”文件路径包括文件路径相对于R项目的根。它们允许在不同的计算机上工作的更简单的文件路径(例如，如果R项目在共享驱动器上或通过电子邮件发送)。正如[上面](#here)所描述的，使用**here**包可以方便地使用相对文件路径。
+
+An example of a relative file path constructed with `here()` is below. We assume the work is in an R project that contains a sub-folder "data" and within that a subfolder "linelists", in which there is the .xlsx file of interest. 
+
+下面是一个使用' here() '构造的相对文件路径的示例。我们假设工作在一个包含子文件夹“data”和子文件夹“linelists”的R项目中，其中有感兴趣的.xlsx文件。
 
 ```{r, eval=F}
 linelist <- import(here("data", "linelists", "ebola_linelist.xlsx"))
@@ -114,7 +177,11 @@ linelist <- import(here("data", "linelists", "ebola_linelist.xlsx"))
 
 Absolute or "full" file paths can be provided to functions like `import()` but they are "fragile" as they are unique to the user's specific computer and therefore *not recommended*. 
 
+绝对或“完整”的文件路径可以提供给像' import() '这样的函数，但它们是“脆弱的”，因为它们是用户特定的计算机所独有的，因此*不推荐*。
+
 Below is an example of an absolute file path, where in Laura's computer there is a folder "analysis", a sub-folder "data" and within that a sub-folder "linelists", in which there is the .xlsx file of interest.  
+
+下面是一个绝对文件路径的例子，在Laura的计算机中有一个文件夹“analysis”，一个子文件夹“data”，其中有一个子文件夹“linelists”，其中有一个感兴趣的.xlsx文件。
 
 ```{r, eval=F}
 linelist <- import("C:/Users/Laura/Documents/analysis/data/linelists/ebola_linelist.xlsx")
@@ -122,24 +189,39 @@ linelist <- import("C:/Users/Laura/Documents/analysis/data/linelists/ebola_linel
 
 A few things to note about absolute file paths:  
 
+关于绝对文件路径，有几点需要注意:
+
 * **Avoid using absolute file paths** as they will break if the script is run on a different computer
 * Use *forward* slashes (`/`), as in the example above (note: this is *NOT* the default for Windows file paths)  
 * File paths that begin with double slashes (e.g. "//...") will likely **not be recognized by R** and will produce an error. Consider moving your work to a "named" or "lettered" drive that begins with a letter (e.g. "J:" or "C:"). See the page on [Directory interactions] for more details on this issue.  
 
+* **避免使用绝对文件路径**，因为如果脚本在不同的计算机上运行，它们将崩溃
+* 使用*前向*斜杠(' / ')，如上例(注意:这不是Windows文件路径的默认值)
+* 以双斜杠开头的文件路径(例如:"//…")将可能**不能被R**识别，并将产生一个错误。考虑将你的工作转移到以字母开头的“named”或“letter”驱动器上。“珍:”或“C:”)。有关这个问题的更多细节，请参阅[目录交互]页面。
+
+
 One scenario where absolute file paths may be appropriate is when you want to import a file from a shared drive that has the same full file path for all users.  
+
+绝对文件路径可能适合的一种情况是，当您希望从共享驱动器导入文件时，该驱动器对所有用户具有相同的完整文件路径。
 
 <span style="color: darkgreen;">**_TIP:_** To quickly convert all `\` to `/`, highlight the code of interest, use Ctrl+f (in Windows), check the option box for "In selection", and then use the replace functionality to convert them.</span>  
 
-
+<span style="color: darkgreen;">**_TIP:_**为了快速转换所有的‘\’到‘/’，突出显示感兴趣的代码，使用Ctrl+f(在Windows中)，选中“在选择中”的选项框，然后使用替换功能来转换它们。</span> 
 
 <!-- ======================================================= -->
 ### Select file manually {.unnumbered}
 
 You can import data manually via one of these methods:  
 
+你可以通过以下方法手动导入数据:
+
 1) Environment RStudio Pane, click "Import Dataset", and select the type of data 
 2) Click File / Import Dataset / (select the type of data)  
 3) To hard-code manual selection, use the *base R* command `file.choose()` (leaving the parentheses empty) to trigger appearance of a **pop-up window** that allows the user to manually select the file from their computer. For example:  
+
+1）环境RStudio窗格，单击“导入数据集”，并选择数据类型
+2）点击文件/导入数据集/(选择数据类型)
+3）要硬编码手动选择，使用*base R*命令' file.choose() '(括号为空)来触发一个弹出窗口的出现，允许用户从他们的计算机中手动选择文件。例如:
 
 ```{r import_choose, eval=F}
 # Manual selection of a file. When this command is run, a POP-UP window will appear. 
@@ -150,7 +232,7 @@ my_data <- import(file.choose())
 
 <span style="color: darkgreen;">**_TIP:_** The **pop-up window** may appear BEHIND your RStudio window.</span>
 
-
+<span style="color: darkgreen;">** _提示:_**弹出窗口**可能出现在您的RStudio窗口后面。</span>
 
 ## Import data  
 
